Fix update on mobile

--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -16,4 +16,9 @@
     padding: 5px 15px;
     margin-top: 6px;
   }
+  &.onlyMobile {
+    @include media-min-width($medium-up) {
+      display: none;
+    }
+  }
 }
